# CLIbrary

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
benchmark/: build_small_index.py  results.json  run_eval.py
benchmark/eval_sets/: README.md  cross_domain.jsonl  in_domain.jsonl  paraphrase.jsonl
manifests-full/: .test-gap-state.json  LICENSE  PROGRESS.md  progress-raw.json  test_output.txt
manifests-full/A01-repo-map/: README.md  SKILL.md  manifest.json
manifests-full/A02-ctx-pack/: README.md  SKILL.md  manifest.json
manifests-full/A03-project-briefer/: README.md  SKILL.md  manifest.json
manifests-full/A04-output-tracker/: README.md  SKILL.md  manifest.json
manifests-full/A05-diff-review/: README.md  SKILL.md  manifest.json
manifests-full/A06-snap-guard/: README.md  SKILL.md  manifest.json
manifests-full/A07-chunk-feeder/: README.md  SKILL.md  manifest.json
manifests-full/A08-recent-changes/: README.md  SKILL.md  manifest.json
manifests-full/A09-code-clip/: README.md  SKILL.md  manifest.json
manifests-full/A10-merge-pilot/: README.md  SKILL.md  manifest.json
manifests-full/A11-file-recall/: README.md  SKILL.md  manifest.json
manifests-full/A12-dup-finder/: README.md  SKILL.md  manifest.json
manifests-full/A13-path-normalize/: README.md  (+2 more)
router/: build_index.py  router.py
scripts/: generate_skill_manifests.py
skill/: _candidate_index.json  _download_index.json  _manifest_index.json
tests/: test_router.py
web/: app.py
(+6255 files in other folders)
