[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clibrary-hub"
version = "0.1.3"
description = "Production-grade tool routing for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "agent", "routing", "tools", "llm", "faiss", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26",
]

[project.scripts]
clibrary-build-index = "clibrary_hub.build_index:main"

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/clibrary-hub/CLIbrary"
Repository = "https://github.com/clibrary-hub/CLIbrary"
Issues = "https://github.com/clibrary-hub/CLIbrary/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
